Change package vendor

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "proxeuse/fortify-tabler",
+    "name": "mario14568/fortify-tabler",
     "description": "A preset for FortifyUI based on the Tabler Bootstrap framework.",
     "keywords": [
         "fortify-ui",
