Update php version

--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
         }
     ],
     "require": {
-        "php": "^7.4 || ^8.0",
+        "php": "^8.1",
         "illuminate/contracts": "^9.0",
         "zacksmash/fortify-ui": "^1.0",
         "intervention/image": "^2.5.1"
